--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -7,9 +7,16 @@
   },
   "files": [
     "src/main.ts",
-    "src/polyfills.ts"
+    "src/polyfills.ts",
+    // "node_modules/jqwidgets-scripts/jqwidgets-ts/angular_jqxbargauge.ts"
   ],
   "include": [
-    "src/**/*.d.ts"
+    "src/**/*.d.ts",
+    // "node_modules/jqwidgets-scripts/jqwidgets-ts/angular_jqxbargauge.ts"
   ]
+  // "include": [
+  //   "./src/**/*",
+  //   "./node_modules/@wtw/**/*",
+  //    "./node_modules/@types/**/*"
+  // ]
 }
